[CEHolderCountry] - improve style of text in the view holder

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -20,7 +20,9 @@
 
     <!-- TextView -->
     <style name="CETextViewHolderCountry" parent="CESubtitle">
-
+        <item name="android:paddingLeft">@dimen/CETextPaddingLeft</item>
+        <item name="android:paddingTop">@dimen/CETextPaddingTop</item>
+        <item name="android:paddingBottom">@dimen/CETextPaddingBottom</item>
     </style>
 
 
