--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primay">@color/design_default_color_primary</color>
+    <color name="primaryVariant">@color/design_default_color_primary_variant</color>
+    <color name="secondary">@color/design_default_color_secondary</color>
+    <color name="secondaryVariant">@color/design_default_color_secondary_variant</color>
+
 </resources>
