--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primay">@color/design_default_color_primary</color>
+    <color name="primary">@color/design_default_color_primary</color>
     <color name="primaryVariant">@color/design_default_color_primary_variant</color>
     <color name="secondary">@color/design_default_color_secondary</color>
     <color name="secondaryVariant">@color/design_default_color_secondary_variant</color>
 
+    <color name="green">#55FFBB</color>
+    <color name="red">#FF55BB</color>
+
+    <color name="coin_owned">@color/green</color>
+    <color name="coin_no_owned">@color/red</color>
 </resources>
