--- a/app/src/main/res/layout/include_coin.xml
+++ b/app/src/main/res/layout/include_coin.xml
@@ -18,12 +18,20 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_launcher_foreground" />
 
+    <View
+        android:id="@+id/dOwned"
+        android:layout_width="@dimen/coin_image_width"
+        android:layout_height="@dimen/coin_owned_bar_height"
+        android:background="@color/coin_no_owned"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivCoin" />
+
     <TextView
         android:id="@+id/tvValue"
         style="@style/CETextCoinCountryValueAtImageBottom"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivCoin"
+        app:layout_constraintTop_toBottomOf="@id/dOwned"
         tools:text="0.05€" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
