--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -39,6 +39,10 @@
         <item name="android:textAlignment">textEnd</item>
     </style>
 
+    <style name="CETextViewCoinValueCardViewHolder" parent="CESubtitle">
+        <item name="android:textAlignment">center</item>
+    </style>
+
     <!-- Other -->
     <style name="CEDividerHolderCountry">
         <item name="android:layout_width">match_parent</item>
@@ -63,6 +67,25 @@
     </style>
 
     <style name="CECardViewCountryCardViewHolder">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="cardCornerRadius">4dp</item>
+        <item name="android:layout_marginLeft">@dimen/CECardViewCountryCardViewHolderMarginLeft
+        </item>
+        <item name="android:layout_marginTop">@dimen/CECardViewCountryCardViewHolderMarginTop</item>
+        <item name="android:layout_marginRight">@dimen/CECardViewCountryCardViewHolderMarginRight
+        </item>
+        <item name="android:layout_marginBottom">
+            @dimen/CECardViewCountryCardViewHolderMarginBottom
+        </item>
+    </style>
+
+    <style name="CEImageViewCoinCardViewHolder">
+        <item name="android:layout_width">@dimen/coin_image_width</item>
+        <item name="android:layout_height">@dimen/coin_image_height</item>
+    </style>
+
+    <style name="CECardViewCoinCardViewHolder">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="cardCornerRadius">4dp</item>
