--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="ceBlack">#FF112111</color>
+    <color name="ceWhite">#FFEEDEEE</color>
+
+    <color name="primaryDark">#54606F</color>
+    <color name="primaryVariantDark">#304067</color>
+    <color name="secondaryDark">#FFE861</color>
+    <color name="secondaryVariantDark">#FFCF93</color>
+
     <color name="primaryBlue">#545FA7</color>
     <color name="primaryVariantBlue">#303F9F</color>
     <color name="secondaryYellow">#FFE799</color>
