--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,7 @@
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimaryDark"
-            android:titleTextColor="#ffffff" />
+            android:background="?attr/colorPrimary" />
 
         <FrameLayout
             android:id="@+id/fragment"
